--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+alembic==1.12.0
 blinker==1.6.2
 click==8.1.7
 colorama==0.4.6
+exceptiongroup==1.1.3
 flake8==6.1.0
 Flask==2.3.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 greenlet==2.0.2
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.4
 MarkupSafe==2.1.3
 mccabe==0.7.0
 packaging==23.1
@@ -14,7 +19,9 @@ pluggy==1.3.0
 pycodestyle==2.11.0
 pyflakes==3.1.0
 pytest==7.4.0
+python-dotenv==1.0.0
 SQLAlchemy==2.0.20
+tomli==2.0.1
 typing_extensions==4.8.0
 Werkzeug==2.3.7
 WTForms==3.0.1
